# pico-audio-visualizer

./: .gitignore  CMakeLists.txt  fft_engine.c  fft_engine.h  frequencies_bins.c  frequencies_bins.h  renderer.c  renderer.h  visualiser.c
educational/: Readme.md  _animation.py  fft.py  screen.py  test.py
hw/: adc_capture.asc  adc_capture.fra_1.raw  adc_capture.net  adc_capture.op.raw  adc_capture.plt  adc_capture.raw  adc_capture_z1.65.asc
hw/pico-audio-visualizer/: pico-audio-visualizer.kicad_prl  pico-audio-visualizer.kicad_pro  pico-audio-visualizer.kicad_sch
